--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -21,9 +21,9 @@
       }
 
       strong {
-        font-size: 1.15em;
         display: inline-block;
         margin-bottom: 1.5rem;
+
         &:last-of-type {
           margin-bottom: 0;
         }
