--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -34,7 +34,8 @@
   text-align: right;
   position: fixed;
   bottom: 0;
-  width: 100%;
+  right: 0;
+  left: 0;
   color: var(--text);
   cursor: default;
 
